# FutureVerb2

./: .gitignore  .gitmodules  CMakeLists.txt  FutureVerb2.jucer  Readme.md
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/FutureVerb2.xcodeproj/: project.pbxproj
Builds/VisualStudio2022/: FutureVerb2.sln  FutureVerb2_SharedCode.vcxproj  FutureVerb2_SharedCode.vcxproj.filters  FutureVerb2_StandalonePlugin.vcxproj  FutureVerb2_VST3.vcxproj  FutureVerb2_VST3ManifestHelper.vcxproj  resources.rc
CMake/: GenerateBinaryData.cmake
JuceLibraryCode/: BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: BinaryData.h  BinaryData2.cpp  CustomLookAndFeel.h  JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Components/: ContentArea.cpp  ContentArea.h  HeaderBar.cpp  HeaderBar.h  VuMeter.cpp  VuMeter.h
Source/Core/: Preset.h  ReverbProcessor.cpp  ReverbProcessor.h
_legacy/: FutureVerb2.jucer
_legacy/JuceLibraryCode/: BinaryData2.cpp  JucePluginDefines.h
tools/: bindatapack.py
